--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Vanilla ES6 • TodoMVC</title>
-    <link rel="stylesheet" href="template.css" />
+    <link rel="stylesheet" href="template1.css" />
   </head>
   <body>
     <section class="todoapp">
